--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -977,7 +977,7 @@ div.dis-ib {
         .activity-ed .activity-list .work .work-grid .inner {
           display: table;
           height: 21.97802vw;
-          width: 21.97802vw;
+          width: 25.64103vw;
           background: rgba(237, 235, 232, 0.9);
           transition: 0.3s;
           opacity: 0; }
@@ -991,11 +991,13 @@ div.dis-ib {
               letter-spacing: 1px;
               text-transform: uppercase;
               font-weight: bold;
-              line-height: 1.75824vw; }
+              line-height: 1.75824vw;
+              text-align: center; }
               .activity-ed .activity-list .work .work-grid .inner .desc h3 a {
                 color: #000; }
             .activity-ed .activity-list .work .work-grid .inner .desc .cat {
               font-size: 0.80586vw;
+              text-align: center;
               letter-spacing: 0.14652vw;
               text-transform: uppercase; }
     .activity-ed .activity-list .work:hover .inner,
@@ -1019,63 +1021,66 @@ div.dis-ib {
   margin-top: 2.1978vw; }
   .best-certified-architect .activity-list {
     margin: 0 3.663vw 2.1978vw; }
-    .best-certified-architect .activity-list .list-item {
+    .best-certified-architect .activity-list .product-type-container {
+      display: inline-block;
       position: relative;
-      margin-bottom: 3.663vw;
-      height: 38.09524vw;
-      width: 24.17582vw;
-      border-radius: 0.3663vw; }
-      .best-certified-architect .activity-list .list-item .list-img-div {
-        position: relative;
-        width: 24.17582vw;
-        height: 24.17582vw;
-        overflow: hidden;
+      margin-bottom: 1.0989vw;
+      max-width: 100%;
+      border-radius: 0.7326vw;
+      overflow: hidden; }
+      .best-certified-architect .activity-list .product-type-container .product-type-img {
+        width: 21.97802vw;
+        height: 29.30403vw;
+        background-size: cover;
+        background-position: center center; }
+      .best-certified-architect .activity-list .product-type-container .product-type-overlay {
+        position: absolute;
+        display: -ms-flexbox;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        -ms-flex-align: center;
+            align-items: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+        z-index: 1000;
+        opacity: 0;
+        transition: all 0.3s ease;
+        background: rgba(12, 10, 10, 0.5);
         cursor: pointer; }
-        .best-certified-architect .activity-list .list-item .list-img-div .item-img {
-          width: 24.17582vw;
-          height: 24.17582vw;
-          border-radius: 0.3663vw 0.3663vw 0 0;
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: cover; }
-        .best-certified-architect .activity-list .list-item .list-img-div .item-cover {
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          border-radius: 0.3663vw;
-          background-color: rgba(102, 102, 102, 0.44);
-          opacity: 0; }
-      .best-certified-architect .activity-list .list-item .list-img-div:hover .item-img {
-        -webkit-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-            -ms-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-                transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-        transition: All 8s ease; }
-      .best-certified-architect .activity-list .list-item .list-img-div:hover .item-cover {
-        opacity: 1;
-        transition: All 1s ease; }
-      .best-certified-architect .activity-list .list-item .item-text {
-        margin-top: 0.7326vw;
-        padding: 0.7326vw; }
-        .best-certified-architect .activity-list .list-item .item-text .t-title {
-          color: #101213; }
-        .best-certified-architect .activity-list .list-item .item-text .t-title:hover {
-          color: #ee534e; }
-        .best-certified-architect .activity-list .list-item .item-text .t-describe {
-          margin-top: 1.0989vw;
-          color: #5e6468; }
-        .best-certified-architect .activity-list .list-item .item-text .t-type {
-          position: absolute;
-          bottom: 0.7326vw;
-          color: #101213; }
-          .best-certified-architect .activity-list .list-item .item-text .t-type .icon {
+        .best-certified-architect .activity-list .product-type-container .product-type-overlay .product-type-info {
+          display: -ms-flexbox;
+          display: flex;
+          width: 80%;
+          height: 80%;
+          text-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-direction: column;
+              flex-direction: column;
+          border-radius: 0.7326vw;
+          border: 1px solid #D0AF51; }
+          .best-certified-architect .activity-list .product-type-container .product-type-overlay .product-type-info h3 {
             font-size: 2.1978vw; }
-    .best-certified-architect .activity-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
-      -webkit-transform: translate3d(0px, -0.14652vw, 0px);
-              transform: translate3d(0px, -0.14652vw, 0px);
-      transition: all 0.3s ease; }
+          .best-certified-architect .activity-list .product-type-container .product-type-overlay .product-type-info .fa {
+            padding-top: 0.65934vw;
+            width: 3.663vw;
+            height: 3.663vw;
+            border: 0.14652vw solid #D0AF51;
+            border-radius: 50%; }
+          .best-certified-architect .activity-list .product-type-container .product-type-overlay .product-type-info .white-border {
+            border-color: #fff; }
+    .best-certified-architect .activity-list .product-type-container:hover .product-type-img {
+      -webkit-filter: blur(0.21978vw);
+              filter: blur(0.21978vw); }
+    .best-certified-architect .activity-list .product-type-container:hover .product-type-overlay {
+      opacity: 1; }
+    .best-certified-architect .activity-list .gold-text {
+      color: #D0AF51; }
+    .best-certified-architect .activity-list .white-text {
+      color: white; }
 
 .all-certified-architect {
   margin-top: 2.1978vw; }
@@ -1120,12 +1125,14 @@ div.dis-ib {
               width: 7.32601vw;
               height: 2.78388vw;
               background-color: #e03636;
-              color: #fff; }
+              color: #fff;
+              cursor: pointer; }
             .all-certified-architect .activity-list .list-item .content .describe .detail .btn-div .home-btn {
               width: 7.32601vw;
               height: 2.78388vw;
               background-color: #f5efef;
-              color: #2b2525; }
+              color: #2b2525;
+              cursor: pointer; }
         .all-certified-architect .activity-list .list-item .content .product {
           margin: 0 0.7326vw 0 2.1978vw;
           width: 51.28205vw;
