--- a/app/view/pc/styles/certified_architect.scss
+++ b/app/view/pc/styles/certified_architect.scss
@@ -10,101 +10,92 @@ $t-hover-color: #ee534e;
     .activity-list {
         margin: $main-padding;
 
-        .list-item {
+        .product-type-container {
+            display: inline-block;
             position: relative;
 
-            margin-bottom: 50px;
-            height: 520px;
-            width: 330px;
+            margin-bottom: 15px;
+            max-width: 100%;
 
-            border-radius: 5px;
+            border-radius: 10px;
 
-            .list-img-div {
-                position: relative;
+            overflow: hidden;
 
-                width: 330px;
-                height: 330px;
+            .product-type-img {
+                width: 300px;
+                height: 400px;
 
-                overflow: hidden;
+                background-size: cover;
+                background-position: center center;
+            }
 
+            .product-type-overlay {
+                position: absolute;
+                display: flex;
+
+                width: 100%;
+                height: 100%;
+                
+                align-items: center;
+                justify-content: center;
+
+                z-index: 1000;
+                opacity: 0;
+                transition: all 0.3s ease;
+                background: rgba(12, 10, 10, 0.5);
                 cursor: pointer;
 
-                .item-img {
-                    width: 330px;
-                    height: 330px;
+                .product-type-info {
+                    display: flex;
 
-                    border-radius: 5px 5px 0 0;
+                    width: 80%;
+                    height: 80%;
 
-                    background-position: center center;
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                }
+                    text-align: center;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
 
-                .item-cover {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
+                    border-radius: 10px;
 
-                    border-radius: 5px;
+                    border: 1px solid #D0AF51;
 
-                    background-color: rgba(102, 102, 102, 0.44);;
-                
-                    opacity: 0;
-                }
-            }
-
-            .list-img-div:hover {
-                .item-img {
-                    transform: rotate(0deg) scale(1.2) translate(0%,0%);
-
-                    transition: All 8s ease;
-                }
-
-                .item-cover {
-                    opacity: 1;
-
-                    transition: All 1s ease;
-                }
-            }
-
-            .item-text {
-                margin-top: 10px;
-                padding: 10px;
-                
-                .t-title {
-                    color: $black-color;
-                }
-
-                .t-title:hover {
-                    color: $t-hover-color;
-                }
-
-                .t-describe {
-                    margin-top: 15px;
-
-                    color: $gray-color;
-                }
-
-                .t-type {
-                    position: absolute;
-                    bottom: 10px;
-
-                    color: $black-color;
-
-                    .icon {
+                    h3 {
                         font-size: 30px;
+                    }
+
+                    .fa {
+                        padding-top: 9px;
+                        width: 50px;
+                        height: 50px;
+
+                        border: 2px solid #D0AF51;
+                        border-radius: 50%;
+                    }
+
+                    .white-border {
+                        border-color: #fff;
                     }
                 }
             }
         }
 
-        .list-item:hover {
-            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
-            
-            transform: translate3d(0px,-2px,0px);
-            transition: all 0.3s ease;
+        .product-type-container:hover {
+            .product-type-img {
+                filter: blur(3px);
+            }
+
+            .product-type-overlay {
+                opacity: 1;
+            }
+        }
+
+        .gold-text {
+            color: #D0AF51;
+        }
+
+        .white-text {
+            color: white;
         }
     }
 }
@@ -181,6 +172,8 @@ $t-hover-color: #ee534e;
         
                                 background-color: rgb(224, 54, 54);
                                 color: #fff;
+
+                                cursor: pointer;
                             }
         
                             .home-btn {
@@ -189,6 +182,8 @@ $t-hover-color: #ee534e;
         
                                 background-color: rgb(245, 239, 239);
                                 color: rgb(43, 37, 37);
+
+                                cursor: pointer;
                             }
                         }
                     }
