--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -3310,7 +3310,7 @@ div.dis-ib {
       display: block;
       margin-bottom: 3.663vw;
       font-size: 1.17216vw;
-      color: #fff; }
+      color: #111111; }
       .cover .tip-cover-content .shopping-cart-noLogin .login-link .link-zh,
       .cover .tip-cover-content .shopping-cart-noLogin .register-link .link-zh {
         display: block;
