--- a/app/view/pc/macro/tip.scss
+++ b/app/view/pc/macro/tip.scss
@@ -129,7 +129,7 @@ $t-hover-color: #ee534e;
 
                 font-size: 16px;
 
-                color: #fff;
+                color: rgb(17, 17, 17);
 
                 .link-zh {
                     display: block;
