<U>注册接口修改及评论删除隐藏

--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -708,9 +708,9 @@ $t-hover-color: #ee534e;
                     margin-top: 0;
                 }
         
-                .date-dz:hover .removeBlock {
-                    opacity: 1;
-                }
+                // .date-dz:hover .removeBlock {
+                //     opacity: 1;
+                // }
         
                 .hf-list-con .all-pl-con {
                     border-top: 1px solid #d9d9d9;
